Still havn't made a design doc
Added items, started implementing Inventory. Redid some accessibility modifiers for Character and item. Added example Child classes for any abstract type

--- a/JRPG/JRPG/JRPG.csproj
+++ b/JRPG/JRPG/JRPG.csproj
@@ -45,8 +45,9 @@
   <ItemGroup>
     <Compile Include="Battle.cs" />
     <Compile Include="Character.cs" />
-    <Compile Include="CharacterExample.cs" />
     <Compile Include="Inventory.cs" />
+    <Compile Include="Item.cs" />
+    <Compile Include="Move.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stats.cs" />
