--- a/JRPG/JRPG.csproj
+++ b/JRPG/JRPG.csproj
@@ -100,6 +100,7 @@
     <Compile Include="JRPG\Battle.cs" />
     <Compile Include="JRPG\Character.cs" />
     <Compile Include="JRPG\Equipment.cs" />
+    <Compile Include="Game.cs" />
     <Compile Include="JRPG\Inventory.cs" />
     <Compile Include="JRPG\Item.cs" />
     <Compile Include="JRPG\Ability.cs" />
